--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -23,125 +23,125 @@ Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not s
 
 ## Ancient era buildings
 
-Palace = 
-Indicates the capital city = 
+Saray = 
+Baskent'i gosterir = 
 
-Monument = 
-Granary = 
-Stone Works = 
-Must not be on plains = 
+Anit = 
+Ambar = 
+Tas ocagi = 
+Ovalarda olamaz = 
 
 Stonehenge = 
 'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
 
-Library = 
+Kutuphane = 
 +1 Science Per 2 Population = 
-Paper Maker = 
+Matbaa = 
 
-The Great Library = 
-Free Technology = 
+Buyuk kutuphane = 
+Bedava Teknoloji = 
 'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
 
-Circus = 
-Walls = 
-Walls of Babylon = 
+Sirk = 
+Duvarlar = 
+Babil duvarlari = 
 
-The Pyramids = 
+Piramitler = 
 'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
 Worker construction increased 25% = 
 Provides 2 free workers = 
 
-Barracks = 
+Kisla = 
 Krepost = 
 Culture and Gold costs of acquiring new tiles reduced by 25% in this city = 
 
-Colossus = 
+Dev heykel = 
 'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 
 +1 gold from worked water tiles in city = 
 
-Temple = 
-Burial Tomb = 
+Tapinak = 
+Kabir = 
 
-The Oracle = 
+Kahin = 
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
 Free Social Policy = 
 
 
-Lighthouse = 
+Deniz Feneri = 
 Can only be built in coastal cities = 
 +1 food from Ocean and Coast tiles = 
 
-The Great Lighthouse = 
+Buyuk Deniz Feneri = 
 'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 
 All military naval units receive +1 movement and +1 sight = 
 
-National College = 
+Ulusal Kolej = 
 
 Chichen Itza = 
 'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 
 Golden Age length increases +50% = 
 
-Courthouse = 
+Adliye = 
 Remove extra unhappiness from annexed cities = 
 Can only be built in annexed cities = 
 
-Stable = 
+Ahir = 
 +15% Production when building Mounted Units in this city = 
 
 Circus Maximus = 
 
-Hanging Gardens = 
+Asili Bahceler = 
 'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 
 
-Colosseum = 
+Kolezyum = 
 
 Terracotta Army = 
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
 
 Market = 
-Bazaar = 
+Carsi = 
 Provides 1 extra copy of each improved luxury resource near this City = 
 +2 Gold for each source of Oil and oasis = 
 
-Monastery = 
+Manastir = 
 
 Notre Dame = 
 'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 
 
-Hagia Sophia = 
+Ayasofya = 
 'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
 +33% great person generation in all cities = 
 
-Mint = 
+Darphane = 
 
 Machu Picchu = 
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = 
 
-Aqueduct = 
+Sukemeri = 
 40% of food is carried over after a new citizen is born = 
 
-Great Wall = 
+Buyuk Duvar = 
 'The art of war teaches us to rely not on the likelihood of the enemy's not attacking, but rather on the fact that we have made our position unassailable.'  - Sun Tzu = 
 Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = 
 
-Workshop = 
+Atolye = 
 Longhouse = 
 +1 Production from each worked Forest tile = 
 
-Forge = 
+Demirci ocagi = 
 
-Harbor = 
+Liman = 
 +1 production from all sea resources worked by the city = 
 Connects trade routes over water = 
 
-University = 
+Universite = 
 +2 Science from each worked Jungle tile = 
 Wat = 
 
-Oxford University = 
-Castle = 
-Mughal Fort = 
+Oxford Universitesi = 
+Kale = 
+Mogol Kalesi = 
 
 Alhambra = 
 'Justice is an unassailable fortress, built on the brow of a mountain which cannot be overthrown by the violence of torrents, nor demolished by the force of armies.'  - Joseph Addison = 
@@ -151,48 +151,48 @@ Angkor Wat =
 'The temple is like no other building in the world. It has towers and decoration and all the refinements which the human genius can conceive of.'  - Antonio da Magdalena = 
 Cost of acquiring new tiles reduced by 25% = 
 
-Porcelain Tower = 
+Porselen Kule = 
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
 Free great scientist appears = 
 
-Ironworks = 
-Armory = 
-Observatory = 
-Opera House = 
+Demirhane = 
+Cephanelik = 
+Rasathane = 
+Opera Binasi = 
 
-Sistine Chapel = 
+Sistine Sapeli = 
 'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 
 Culture in all cities increased by 25% = 
 
-Bank = 
-Hanse = 
+Banka = 
+Ticaret Odasi = 
 +5% Production for every Trade Route with a City-State in the empire = 
-Satrap's Court = 
+Somurge Mahkemesi = 
 
-Forbidden Palace = 
+Yasak Saray = 
 'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 
 Unhappiness from population decreased by 10% = 
 
-Theatre = 
+Tiyatro = 
 
-Leaning Tower of Pisa = 
+Pisa Kulesi = 
 'Don't clap too hard - it's a very old building.' - John Osbourne = 
 Free Great Person = 
 Choose a free great person = 
 Get  = 
 
-Himeji Castle = 
+Himeji Kalesi = 
 'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 
 +15% combat strength for units fighting in friendly territory = 
 
-Taj Mahal = 
+Tac Mahal = 
 'The Taj Mahal rises above the banks of the river like a solitary tear suspended on the cheek of time.'  - Rabindranath Tagore = 
 Empire enters golden age = 
 
-Windmill = 
+Yeldegirmeni = 
 Must not be on hill = 
-Museum = 
-Hermitage = 
+Muze = 
+Inziva yeri = 
 
 The Louvre = 
 'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 
